holy shit IGTTool is gonna be a pain